MDEV-24383 SIGSEGV in heap_info from make_join_statistics on 2nd SP exec.

Since some optimizer switches lead to the changes in the
parser-generated structures, we have to reload cached SP-s after
the change.